fixed level stack and spacing

--- a/campus/static/css/home.css
+++ b/campus/static/css/home.css
@@ -190,7 +190,6 @@ h2{
 }
 
 .level-card{
-    display: block;
     width: 35vw;
     padding: 9rem 15rem;
     background-color: #D3CCFF;
